--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-# Python env
-venv
-# Pycharm
-.idea
-.DS_Store
+# AWS Config
+cluster.config
+
+cluster.config
+EMR_CONNECTION.pem
+
+# .idea Files
+
+Data_Modeling_with_Postgres/.idea/
+Data_Lake/dl.cfg
+Data_Lake/.idea/
+Data_Warehouse/.idea/
+Data_Warehouse/__pycache__/
+Data_Warehouse/dwh.cfg
